--- a/serviceDiscovery/compose.yaml
+++ b/serviceDiscovery/compose.yaml
@@ -1,1 +1,8 @@
+version: "3.9"
+
 services:
+  eureka-server:
+    image: netflixoss/eureka:1.4.12
+    container_name: eureka-server
+    ports:
+      - "8761:8761"
