--- a/serviceDiscovery/src/main/resources/application.yml
+++ b/serviceDiscovery/src/main/resources/application.yml
@@ -3,17 +3,11 @@ server:
 
 spring:
   application:
-    name:
-      service-discovery
-  docker:
-    compose:
-      enabled: false
+    name: service-discovery
 
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    server:
-      wait-time-in-ms-when-sync-empty: 0
+  server:
+    wait-time-in-ms-when-sync-empty: 0
